--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,29 @@
 version: '3'
 services:
-  app:
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile
+  mysql:
+    platform: linux/x86_64
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     ports:
-      - 3000:3000
-    command: bundle exec rails s -p 3000 -b 0.0.0.0
+      - '3306:3306'
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - ./:/app:cached
+      - mysql-data:/var/lib/mysql
+  web:
+    build: ./web
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && ./bin/dev"
+    volumes:
+      - ./web:/myapp
+      - rails_gem_data:/usr/local/bundle
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
     stdin_open: true
-    tty: true     
+    tty: true
+
+volumes:
+  mysql-data:
+  rails_gem_data:
+    driver: local
