--- a/web/package.json
+++ b/web/package.json
@@ -2,16 +2,21 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.6"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "postcss-cli": "^11.0.0",
     "typescript": "^5.5.3"
   }
 }
