--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
+    "lucide-react": "^0.411.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
